<resources>
    <string name="app_name">Развивающие тесты</string>

    <string name="search">Поиск</string>
    <string name="create_test">Создать тест</string>
    <string name="author">Автор</string>


    <string name="back_button">&lt;</string>
    <string name="front_button">></string>
    <string name="add_button">+</string>
    <string name="delete_button">✖</string>
    <string name="exit_button">✖</string>
    <string name="ok">Ок</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>

    <string name="test_question_count">Количество вопросов</string>
    <string name="test_category">Категория</string>

    <!--LoginActivity-->
    <string name="hello">Здравствуй</string>
    <string name="hello_under">войди или зарегистрируйся</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="logout">Выход</string>
    <string name="sign_in_button_text">Авторизация</string>
    <string name="sign_out_button_text">Регистрация</string>
    <string name="forgot_password">Забыл пароль?</string>
    <string name="error_enter_login">Введите логин</string>
    <string name="error_invalid_login">Неверный логин</string>
    <string name="error_enter_password">Введите пароль</string>
    <string name="error_invalid_password">Неверный пароль</string>

    <string name="register_warning_header">Продолжить регистрацию?</string>
    <string name="register_warning_message">Вы будете зарегестрированы по данным что вы ввели</string>

    <string name="server_not_available_header">Сервер недоступен</string>
    <string name="server_not_available_message">Вы можете продолжить пользоваться приложением как гость в оффлайне</string>

    <string name="guest">Гость</string>

    <string name="accept">Да</string>
    <string name="decline">Нет</string>

    <!--HelloUser-->
    <string name="hello_user_night">Доброй ночи</string>
    <string name="hello_user_morning">Доброе утро</string>
    <string name="hello_user_afternoon">Добрый день</string>
    <string name="hello_user_evening">Добрый вечер</string>

    <!-- Test Editing-->

    <string name="edit_test_edit">Изменить</string>
    <string name="edit_test_remove">Удалить</string>
    <string name="edit_test_make_sure_delete_title">Вы действительно хотите удалить тест?</string>
    <string name="edit_test_make_sure_delete_message">Если вы удалите тест, вы не сможете его востановить</string>

    <string name="edit_test_fail_header">Вы не автор этого теста</string>
    <string name="edit_test_fail_message">Только создатель этого теста может его редактировать или удалить</string>

    <!--CreateTest-->
    <string name="create_test_header">Создайте свой тест</string>
    <string-array name="create_test_under">
        <item>Для начала введи название теста</item>
        <item>Дальше выбери тип теста</item>
        <item>Главное составить вопросы</item>
        <item>Осталось только поставить теги</item>
        <item>Проверь себя на ошибки и можно сохранять</item>
    </string-array>

    <string name="create_test_choose">Выбрать</string>
    <string name="create_test_set">Составить список вопросов</string>
    <string name="create_test_save">Сохранить</string>
    <string name="create_test_name">Название</string>
    <string name="create_test_add">Добавить</string>
    <string name="create_test_get_result">Получить результат</string>

    <string name="create_test_at_first_select_type">Сначала выберите тип теста</string>
    <string name="create_test_you_no_need_results">Вам не нужны результаты</string>

    <string name="create_test_choose_type">Выбери тип теста</string>
    <string name="create_test_selected_type">Выберанный тип теста </string>

    <string name="create_test_change_type_question">Изменить тип?</string>
    <string name="create_test_change_type_warning">Изменив тип вы потеряете созданные вопросы и результаты.</string>
    <string name="create_test_exit_creation_question">Вернуться назад?</string>
    <string name="create_test_exit_creation_warning">Ваш тест не сохранён</string>

    <string name="create_test_choose_tags">Выберите теги</string>
    <string name="create_test_set_question">Составьте список вопросов</string>
    <string name="create_test_test_results_for_questions">Выберите результаты для теста</string>

    <string name="create_test_question_text">Текст вопроса</string>
    <string name="create_test_answer_text">Ответы</string>
    <string name="create_test_enter_name">Введите название теста</string>
    <string name="create_test_enter_tag_name">Введите название тега</string>
    <string name="create_test_enter_question_text">Введите текст вопроса</string>
    <string name="create_test_enter_answer_text">Введите текст ответа</string>
    <string name="create_test_enter_result_text">Введите текст результата</string>
    <string name="create_test_enter_answer">Ответ</string>
    <string name="create_test_enter_value">Значение</string>
    <string name="create_test_enter_weight">Вес</string>
    <string name="create_test_max">Макс.</string>
    <string name="create_test_min">Мин.</string>

    <string name="create_test_type_score">Ответы с баллами</string>
    <string name="create_test_type_score_info">За каждый ответ начисляется балл, в зависимости от выбраного результата.\nПосле прохождения теста показывается результат в зависимости от суммы набраных баллов.</string>
    <string name="create_test_type_string">Ассоциации</string>
    <string name="create_test_type_string_info">К каждому ответу есть своё пояснение.</string>
    <string name="create_test_type_neuro">Зависимый тест</string>
    <string name="create_test_type_neuro_info">Каждый ответ влияет на все результаты.</string>

    <string name="your_result">Ваш результат</string>
    <string name="find_new_tests">Просмотреть ещё тесты</string>

    <string name="test_add_error">Сервер недоступен, ваш тест сохранен локально</string>
    <string name="test_edit_error">Нет соединения с сервером, тест невозможно было изменить</string>
    <string name="test_add_request">Загрузить тест на сервер</string>
    <string name="please_login">Вы должны войти в систему</string>
    <string name="please_login_message">Для того чтобы загрузить тест на сервер, выйдите из локального аккаутна и войдите в систему.</string>

</resources>
