<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:windowSoftInputMode="adjustResize"
    tools:context=".Login"
    tools:layout_editor_absoluteY="25dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/loginFormLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp">

            <!--<TextView-->
            <!--android:id="@+id/textView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="6dp"-->
            <!--android:paddingRight="6dp"-->
            <!--android:text="@string/login"-->
            <!--android:textAlignment="viewStart" />-->

            <TextView
                android:id="@+id/login_hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="48sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/hello_under"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/login_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/login_input"
                android:hint="@string/login"
                android:inputType="textPersonName"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/loginInputTextColor"
                android:textSize="16sp"
                tools:ignore="HardcodedText"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="67dp" />

            <!--<TextView-->
            <!--android:id="@+id/TextPass"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="12dp"-->
            <!--android:paddingLeft="6dp"-->
            <!--android:paddingRight="6dp"-->
            <!--android:text="@string/password"-->
            <!--android:textAlignment="viewStart" />-->

            <EditText
                android:id="@+id/LoginPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/login_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/loginInputTextColor"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_rounded_stroke"
                    android:onClick="onLoginButtonClick"
                    android:text="@string/sign_in_button_text"
                    android:textColor="@color/colorText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/scrollView2" />

                <Button
                    android:id="@+id/login_button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg_rounded_stroke"
                    android:onClick="onLoginButtonClick"
                    android:text="@string/sign_out_button_text"
                    android:textColor="@color/colorText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/scrollView2" />
            </LinearLayout>

            <TextView
                android:id="@+id/LoginErrorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:padding="14dp"
                android:textAlignment="center"
                android:textColor="@color/colorError"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="314dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/forgot_password"
                android:textColor="@color/colorTextOnButtons" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>